# DataStructureC

./: .gitignore  CMakeLists.txt  main.c
implementations/: arvb.c  circle_list.c  double_linked_list.c  list.c  queue.c  queue_vector.c  sorting.c  stack.c  stack_vector.c  tree.c
interfaces/: arvb.h  circle_list.h  double_linked_list.h  list.h  queue.h  queue_vector.h  sorting.h  stack.h  stack_vector.h  tree.h
